// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome page main error story 1`] = `
<div
  className="start-call-banner-block"
>
  <div>
    <h1>
      Welcome
    </h1>
    <hr />
    <div>
      
    </div>
    <div
      className="error-container"
    >
      <h3>
        Something went wrong.
      </h3>
    </div>
  </div>
</div>
`;

exports[`Welcome page main story 1`] = `
<div
  className="start-call-banner-block"
>
  <div>
    <h1>
      Welcome
    </h1>
    <hr />
    <div>
      
    </div>
    <div
      className="error-container"
    />
  </div>
</div>
`;

exports[`Welcome page timeout error story 1`] = `
<div
  className="start-call-banner-block"
>
  <div>
    <h1>
      Welcome
    </h1>
    <hr />
    <div>
      
    </div>
    <div
      className="error-container"
    >
      <h3>
        Request timed out.
      </h3>
    </div>
  </div>
</div>
`;
